--- a/React/dojo-blog/src/index.css
+++ b/React/dojo-blog/src/index.css
@@ -61,14 +61,14 @@
     margin: 20px 0;
 }
 
-/* .blog-details button {
+.blog-details button {
   background: #f1356d;
   color: #fff;
   border: 0;
   padding: 8px;
   border-radius: 8px;
-  cursor: pointer; */
-/* } */
+  cursor: pointer;
+}
 
 .create {
   max-width: 400px;
