added nav and links to html files

--- a/Node_Express/views/index.html
+++ b/Node_Express/views/index.html
@@ -4,8 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Node.js Crash Course</title>
   </head>
-  <body>
+  <br>
     <h1>Home</h1>
     <h2>Your path to becoming a Node.js ninja!</h2>
+    <nav>
+      <a href="/">Homepage</a></nav>
+    </br>
+    <a href="/about">about</a>
+    </nav>
   </body>
 </html>
+   
