--- a/Node_Express/views/about.html
+++ b/Node_Express/views/about.html
@@ -7,5 +7,10 @@
   <body>
     <h1>About</h1>
     <h2>Your path to becoming a Node.js ninja!</h2>
+    <nav>
+      <a href="/">Homepage</a></nav>
+    </br>
+    <a href="/about">about</a>
+    </nav>
   </body>
 </html>
