7 added titles using ejs

--- a/Node_Express/views/index.ejs
+++ b/Node_Express/views/index.ejs
@@ -2,9 +2,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja</title>
+    <title>Blog Ninja | <%= title %> </title>
   </head>
   <body>
+ 
     <nav>
     <div class="site-title">
       <hr href="/"><h1>Blog Ninja</h1></a>
