7 - nav and head partials

--- a/Node_Express/views/create.ejs
+++ b/Node_Express/views/create.ejs
@@ -1,35 +1,19 @@
-<html lang ="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja | <%= title %> </title>
-  </head>
+<html lang="en">
+  <%- include('./partials/head.ejs') %>
+
   <body>
-    <nav>
-    <div class="site-title">
-      <hr href="/"><h1>Blog Ninja</h1></a>
-      <p>A net ninja site</p>
-
-    </div>
-    <ul>
-      <li><a href="/">Blogs</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/blogs/create">New Blog</a></li>
-
-    </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
 
     <div class="create-blog content">
       <form>
         <label for="title">Blog title:</label>
-        <input type="text" id="title" required>
-          <label fir="snippet">Blog snippet:</label>
-          <input type="text" id="snippet" required>
-          <label for="body">Blog body:</label>
-          <textarea id="body" required></textarea>
-          <button>Submit</button>
-
+        <input type="text" id="title" required />
+        <label fir="snippet">Blog snippet:</label>
+        <input type="text" id="snippet" required />
+        <label for="body">Blog body:</label>
+        <textarea id="body" required></textarea> 
+        <button>Submit</button>
       </form>
     </div>
-    </body>
-    </html>
+  </body>
+</html>
