--- a/Node_Express/views/404.ejs
+++ b/Node_Express/views/404.ejs
@@ -1,26 +1,9 @@
-<html lang ="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja | <%= title %> </title>
-  </head>
+<html lang="en">
+  <%- include('./partials/head.ejs')%>
+
   <body>
-    <nav>
-    <div class="site-title">
-      <hr href="/"><h1>Blog Ninja</h1></a>
-      <p>A net ninja site</p>
+    <%- include('./partials/nav.ejs') %>
 
-    </div>
-    <ul>
-      <li><a href="/">Blogs</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/blogs/create">New Blog</a></li>
-
-    </ul>
-    </nav>
-
-    <div class="not-found content">
-      OPPS, page not found :)
-    </div> 
-    </body>
-    </html>
+    <div class="not-found content">OPPS, page not found :)</div>
+  </body>
+</html>
