--- a/Node_Express/views/about.ejs
+++ b/Node_Express/views/about.ejs
@@ -1,28 +1,26 @@
-<html lang ="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja | <%= title %> </title>
-  </head>
+<html lang="en">
+  <%- include('./partials/head.ejs')%>
+
   <body>
-    <nav>
-    <div class="site-title">
-      <hr href="/"><h1>Blog Ninja</h1></a>
-      <p>A net ninja site</p>
+    <%- include('./partials/nav.ejs') %>
 
-    </div>
-    <ul>
-      <li><a href="/">Blogs</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/blogs/create">New Blog</a></li>
-
-    </ul>
-    </nav>
     <div class="about content">
       <h2>About Us</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam
+        quaerat illo a modi tenetur ut blanditiis, illum quo consectetur
+        recusandae excepturi natus impedit rem, tempora cum fuga quae in.
+      </p>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam
+        quaerat illo a modi tenetur ut blanditiis, illum quo consectetur
+        recusandae excepturi natus impedit rem, tempora cum fuga quae in.
+      </p>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam
+        quaerat illo a modi tenetur ut blanditiis, illum quo consectetur
+        recusandae excepturi natus impedit rem, tempora cum fuga quae in.
+      </p>
     </div>
   </body>
-  </html>
+</html>
