--- a/Node_Express/views/index.ejs
+++ b/Node_Express/views/index.ejs
@@ -1,36 +1,16 @@
-<html lang ="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja | <%= title %> </title>
-  </head>
+<html lang="en">
+  <%- include('./partials/head.ejs')%>
   <body>
- 
-    <nav>
-    <div class="site-title">
-      <hr href="/"><h1>Blog Ninja</h1></a>
-      <p>A net ninja site</p>
+    <%- include('./partials/nav.ejs') %>
 
-    </div>
-    <ul>
-      <li><a href="/">Blogs</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/blogs/create">New Blog</a></li>
-
-    </ul>
-    </nav>
-
-    <div class = "blogs content">
+    <div class="blogs content">
       <h2>All Blogs</h2>
-      <% if(blogs.length > 0){ %>
-      <% blogs.forEach(blog =>{ %>
-        <h3 class = "title"><%= blog.title %> </h3>
-        <p class = "snippet"><%= blog.snippet %>></p>
-   <%  }) %>
-        <% } else { %>
-          <p>There are no blogs to display</p>
-<%} %>
-      
+      <% if(blogs.length > 0){ %> <% blogs.forEach(blog =>{ %>
+      <h3 class="title"><%= blog.title %></h3>
+      <p class="snippet"><%= blog.snippet %>></p>
+      <% }) %> <% } else { %>
+      <p>There are no blogs to display</p>
+      <%} %>
     </div>
   </body>
 </html>
