7  added footer and CSS to head partial

--- a/Node_Express/views/about.ejs
+++ b/Node_Express/views/about.ejs
@@ -22,5 +22,8 @@
         recusandae excepturi natus impedit rem, tempora cum fuga quae in.
       </p>
     </div>
+    <%- include('./partials/footer.ejs')%>
+
   </body>
+
 </html>
