--- a/Node_Express/views/404.ejs
+++ b/Node_Express/views/404.ejs
@@ -5,5 +5,8 @@
     <%- include('./partials/nav.ejs') %>
 
     <div class="not-found content">OPPS, page not found :)</div>
+    <%- include('./partials/footer.ejs')%>
+
   </body>
+
 </html>
