--- a/Node_Express/views/create.ejs
+++ b/Node_Express/views/create.ejs
@@ -11,9 +11,11 @@
         <label fir="snippet">Blog snippet:</label>
         <input type="text" id="snippet" required />
         <label for="body">Blog body:</label>
-        <textarea id="body" required></textarea> 
+        <textarea id="body" required></textarea>
         <button>Submit</button>
       </form>
     </div>
+    <%- include('./partials/footer.ejs')%>
+
   </body>
 </html>
