added MVC and cotrollers

--- a/Node_Express/views/blogs/details.ejs
+++ b/Node_Express/views/blogs/details.ejs
@@ -1,7 +1,7 @@
 <html lang="en">
-  <%- include('./partials/head.ejs')%>
+  <%- include('../partials/head.ejs')%>
   <body>
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
 
     <div class="details content">
       <h2><%-blog.title%></h2>
@@ -13,7 +13,7 @@
       <!-- this enables you to take the data blog._id and using the Fetch API 
       send a delete request to the server, with this blog's ID -->
     </div>
-    <%- include('./partials/footer.ejs')%>
+    <%- include('../partials/footer.ejs')%>
     <script>
       const trash = document.querySelector("a.delete");
       trash.addEventListener("click", (e) => {
